rs/macros/core/tests/snapshots/gservice__works_with_crate_path.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct SomeServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails_rename::meta::ServiceMeta> sails_rename::gstd::services::Exposure
for SomeServiceExposure<T> {
    fn interface_id() -> sails_rename::meta::InterfaceId {
        <T as sails_rename::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails_rename::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails_rename::meta::Identifiable>::INTERFACE_ID => {
                Some(true)
            }
            (id, 1u16) if id == <T as sails_rename::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for SomeServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for SomeServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
impl SomeServiceExposure<SomeService> {
    #[export]
    pub async fn do_this(&mut self, p1: u32, p2: String) -> u32 {
        p1
    }
    #[export]
    pub fn this(&self, p1: bool) -> bool {
        p1
    }
    pub fn try_handle(
        mut self,
        interface_id: sails_rename::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails_rename::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                1u16,
            ) if id
                == <self::SomeService as sails_rename::meta::Identifiable>::INTERFACE_ID => {
                let request: some_service_meta::__ThisParams = sails_rename::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.this(request.p1);
                let value = 0u128;
                if !sails_rename::gstd::is_empty_tuple::<bool>() {
                    sails_rename::gstd::encode_invocation_payload::<
                        some_service_meta::__ThisParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails_rename::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails_rename::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::SomeService as sails_rename::meta::Identifiable>::INTERFACE_ID => {
                let request: some_service_meta::__DoThisParams = sails_rename::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.do_this(request.p1, request.p2).await;
                let value = 0u128;
                if !sails_rename::gstd::is_empty_tuple::<u32>() {
                    sails_rename::gstd::encode_invocation_payload::<
                        some_service_meta::__DoThisParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            _ => None,
        }
    }
}
impl sails_rename::gstd::services::Service for SomeService {
    type Exposure = SomeServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod some_service_meta {
    use super::*;
    const __INTERFACE_ID: sails_rename::meta::InterfaceId = {
        let mut final_hash = sails_rename::keccak_const::Keccak256::new();
        final_hash = final_hash
            .update(&sails_rename::hash_fn!(command DoThis(u32, String) -> u32));
        final_hash = final_hash
            .update(&sails_rename::hash_fn!(query This(bool) -> bool));
        let hash = final_hash.finalize();
        sails_rename::meta::InterfaceId::from_bytes_32(hash)
    };
    impl sails_rename::meta::Identifiable for super::SomeService {
        const INTERFACE_ID: sails_rename::meta::InterfaceId = __INTERFACE_ID;
    }
    impl sails_rename::meta::ServiceMeta for super::SomeService {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails_rename::meta::BaseServiceMeta] = &[];
        const METHODS: &'static [sails_rename::meta::MethodMetadata] = &[
            sails_rename::meta::MethodMetadata {
                name: "DoThis",
                entry_id: 0u16,
                hash: sails_rename::hash_fn!(command DoThis(u32, String) -> u32),
                is_async: true,
            },
            sails_rename::meta::MethodMetadata {
                name: "This",
                entry_id: 1u16,
                hash: sails_rename::hash_fn!(query This(bool) -> bool),
                is_async: false,
            },
        ];
        const ASYNC: bool = true;
    }
    sails_rename::invocation_io!(
        pub struct __DoThisParams { pub (super) p1 : u32, pub (super) p2 : String, },
        interface_id = __INTERFACE_ID, entry_id = 0u16,
    );
    sails_rename::invocation_io!(
        pub struct __ThisParams { pub (super) p1 : bool, }, interface_id =
        __INTERFACE_ID, entry_id = 1u16,
    );
    #[derive(sails_rename::TypeInfo)]
    #[type_info(crate = sails_rename::type_info)]
    pub enum CommandsMeta {
        DoThis(__DoThisParams, u32),
    }
    #[derive(sails_rename::TypeInfo)]
    #[type_info(crate = sails_rename::type_info)]
    pub enum QueriesMeta {
        This(__ThisParams, bool),
    }
    #[derive(sails_rename::TypeInfo)]
    #[type_info(crate = sails_rename::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
